[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-ai-tools"
version = "1.0.0"
description = "HPC/AI content generation and publishing tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Attaxu", email = "last.kakas.1989@gmail.com"}
]
keywords = ["hpc", "ai", "content-generation", "automation", "twitter", "x"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "python-dotenv>=1.0.0",
    "tweepy>=4.14.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/last-kakas-1989/hpc-ai-tools"
Repository = "https://github.com/last-kakas-1989/hpc-ai-tools"
Issues = "https://github.com/last-kakas-1989/hpc-ai-tools/issues"

[project.scripts]
hpc-ai-tools = "hpc_ai_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hpc_ai_tools --cov-report=term-missing"